      specific binds are defined.

- schema
    - Added prefixes option to `Table` that accepts a list of 
      strings to insert after CREATE in the CREATE TABLE statement.
      [ticket:1075]

    - Unicode, UnicodeText types now set "assert_unicode" and
      "convert_unicode" by default, but accept overriding
      **kwargs for these values.
      
- sqlite
    - Modified SQLite's representation of "microseconds" to 
      match the output of str(somedatetime), i.e. in that the
      microseconds are represented as fractional seconds in
      string format.  This makes SQLA's SQLite date type
      compatible with datetimes that were saved directly
      using Pysqlite (which just calls str()).  
      Note that this is incompatible with the existing microseconds
      values in a SQLA 0.4 generated SQLite database file.
      
      To get the old behavior globally:
      
           from sqlalchemy.databases.sqlite import DateTimeMixin
           DateTimeMixin.__legacy_microseconds__ = True
           
      To get the behavior on individual DateTime types:
      
            t = sqlite.SLDateTime()
            t.__legacy_microseconds__ = True
            
      Then use "t" as the type on the Column.
           
      [ticket:1090]

    - SQLite Date, DateTime, and Time types only accept Python
      datetime objects now, not strings.  If you'd like to format
      dates as strings yourself with SQLite, use a String type.
      If you'd like them to return datetime objects anyway despite 
      their accepting strings as input, make a TypeDecorator around 
      String - SQLA doesn't encourage this pattern.

- extensions
    - Declarative supports a __table_args__ class variable, which
      is either a dictionary, or tuple of the form
      (arg1, arg2, ..., {kwarg1:value, ...}) which contains positional
      + kw arguments to be passed to the Table constructor. 
      [ticket:1096]
      
0.5beta1
========